tampilan_homeScreen & riwayatAbsen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_native_splash: ^2.4.7
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +54,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-
+    - assets/images/absen.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -87,8 +86,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
-flutter_native_splash:
-  color: "#0D6E9E"
-  image: assets/images/absen.png
-  android: true
-  ios: true
