--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  fl_chart: ^0.66.0
+  excel: ^4.0.2
+  path_provider: ^2.1.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -55,6 +59,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/absen.png
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
