--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  shared_preferences: ^2.5.4
+  device_info_plus: ^12.3.0
+  http: ^1.6.0
+  protobuf: ^6.0.0
+  provider: ^6.1.5+1
+  qr_flutter: ^4.1.0
+  intl: ^0.20.2
+  mobile_scanner: ^7.1.4
 
 dev_dependencies:
   flutter_test:
