--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   fl_chart: ^0.66.0
   excel: ^4.0.2
   path_provider: ^2.1.2
+  permission_handler: ^11.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
