--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   fl_chart: ^0.66.0
+  pdf: ^3.10.7
+  printing: ^5.12.0
   excel: ^4.0.2
   path_provider: ^2.1.2
   permission_handler: ^11.3.1
