--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   pdf: ^3.10.7
   printing: ^5.12.0
   excel: ^4.0.2
-  path_provider: ^2.1.2
+  path_provider: ^2.1.5
   permission_handler: ^11.3.1
 
 
@@ -49,6 +49,7 @@ dependencies:
   qr_flutter: ^4.1.0
   intl: ^0.20.2
   mobile_scanner: ^7.1.4
+  open_filex: ^4.7.0
 
 dev_dependencies:
   flutter_test:
